# installer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
configs/: penumbra.yml
src/: adb.rs  config.rs  engine.rs  error.rs  github.rs  lib.rs  logs.rs  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  setup.rs
src-ui/: package-lock.json  package.json
src-ui/src/: App.tsx
src-ui/src/components/: ConsoleOutput.tsx  DeviceStatus.tsx  NoDevice.tsx  PackageList.tsx  RepositorySelector.tsx
src-ui/src/components/setup/: AdbSection.tsx  GithubSection.tsx  SetupWizard.tsx
src-ui/src/hooks/: useSetupConfig.ts  useTauri.ts
tests/: integration_test.rs
